Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -3041,6 +3041,27 @@ note={Published 21 January 2016,  Retrieved 30 July 2016}
     year = "2020",
 }
 
+@article{bedford2018ancient,
+  title={Ancient DNA and its contribution to understanding the human history of the Pacific Islands},
+  author={Bedford, Stuart and Blust, Robert and Burley, David V and Cox, Murray and Kirch, Patrick V and Matisoo-Smith, Elizabeth and Naess, Ashild and Pawley, Andrew and Sand, Christophe and Sheppard, Peter},
+  journal={Archaeology in Oceania},
+  volume={53},
+  number={3},
+  pages={205--219},
+  year={2018}
+}
+
+@article{barlow2023papuan,
+  title={Papuan-Austronesian contact and the spread of numeral systems in Melanesia},
+  author={Barlow, Russell},
+  journal={Diachronica},
+  volume={40},
+  number={3},
+  pages={287--340},
+  year={2023},
+  publisher={John Benjamins Publishing Company Amsterdam/Philadelphia}
+}
+
 
 @article{lipson_harvad_ancient_dna_vanuatu_2018,
   title = {Population {{Turnover}} in {{Remote Oceania Shortly}} after {{Initial Settlement}}},
