--- a/latex/main.tex
+++ b/latex/main.tex
@@ -206,9 +206,9 @@ Returning to language richness in Remote Oceania, a significant factor to consid
 \label{austro_expansion_bellwood}
 \end{figure}
 
-Recent studies of ancient and modern DNA \citep{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018} have shown that there is evidence of significant levels of genes that are associated with origins in non-Austronesian speaking communities from New Guinea and Solomons among Vanuatu people. The suggestion is that while the initial settlement of Remote Oceania was likely to be Austronesian (i.e. genetically similar to Asian populations), there have since been more people coming who have non-Austronesian ancestry from the New Guinea region. Interestingly, \citet{posth_jena_ancient_dna_vanuatu_2018} highlight that this had little effect on the languages of the region, communities still speak languages that are clearly Austronesian in origin.
+Recent studies of ancient and modern DNA \citep{lipson_harvad_ancient_dna_vanuatu_2018, posth_jena_ancient_dna_vanuatu_2018} have shown that there is evidence of significant levels of genes that are associated with origins in non-Austronesian speaking communities from New Guinea and Solomons among Vanuatu people. The suggestion is that while the initial settlement of Remote Oceania was likely to be wholly Austronesian (i.e. genetically similar to East Asian populations), there have since been more people coming who have deeper ancestry from the New Guinea region. Interestingly, \citet{posth_jena_ancient_dna_vanuatu_2018} highlight that this had little effect on the languages of the region, communities in Vanuatu still speak languages that are clearly Austronesian in origin. This could be because the New Guinea people already spoke Austronesian languages at the point of migration or due to other reasons (c.f. \citet[288, 321]{barlow2023papuan}; \citet[209-210]{bedford2018ancient}).
 
-Likewise, further studies such as \citet{liu2022ancient} show similar influence from New Guinea and Solomons northwards in Palau, Chuuk and Pohnpei island groups. It is becoming increasingly clear in the overall scientific literature on the ancient history of Oceania that there were a lot more connections and interactions than previously postulated --- including to island groups of Near Oceania. It is not the case that people travelled to one place, and then stayed put there with little influence from other people of Oceania. Oceania is an interconnected place today, and it was historically too.
+Likewise, further studies such as \citet{liu2022ancient} show similar genetic influence from New Guinea and Solomons northwards in Palau, Chuuk and Pohnpei island groups. It is becoming increasingly clear in the overall scientific literature on the ancient history of Oceania that there were a lot more connections and interactions than previously postulated --- including to island groups of Near Oceania. It is not the case that people travelled to one place, and then stayed put there with little influence from other people of Oceania. Oceania is an interconnected place today, and it was historically too.
 
 It is possible that these interactions, which were more frequent in Vanuatu than in Polynesia, have implications for many domains of human life --- including political organisation and language diversity. Linguist and anthropologist \citet[104]{lynch1981melanesian} has stressed the relevance of contact with non-Austronesian communities from New Guinea, Bismarck, Bougainville and the Solomon Islands as a key factor in explaining why there are more languages in Vanuatu compared to the rest of Oceania \footnote{\citet{lynch1981melanesian} uses the terms ``Papuan'' and contrasts Melanesia and Polynesia. I have chosen to summarise him here in more precise terms in relation to how his work impacts the current study. He writes specifically about the influence of languages of New Britain, Bougainville, central Solomon Islands, Manus and the southeast of New Guinea mainland (Oro province, Milne Bay province and National Capital District) on Oceanic languages of those regions and in Temotu.}. Lynch does not offer a precise account but outlines several different potential scenarios whereby contact with non-Austronesian groups caused greater diversification among Oceanic languages.
 
@@ -301,18 +301,18 @@ The results were calculated in R 3.6.0 \citep{R} using the function \texttt{brms
 % BARG
 We will first go through the outcomes for the shared language island groups (i.e. groups of islands that share at least one language), and secondly the overnight distance groups. In common for both is that political complexity is a relevant predicting factor, with a negative effect (the more political vertical levels, the lower the number of languages). This lends support to the proposal by \citet{pawley81} and \citet{pawley2007}. However, there are details of the result that suggest that the effect may be due to non-Austronesian contact rather than political complexity \emph{per se}.
 
-Fig.~\ref{medium_model_predict} shows the actual observed language counts (purple triangles) and predictions of this model (green boxplots). The model does predict that Santo, Kanaky and Malakula have the highest language counts in the dataset. Our observed language counts for Santo, Kanky and Malakula are 24, 29 and 33 respectively. The model is very close for Santo and Kanaky for its average prediction value but underestimates Malakula by 17 languages. The absolute average difference between the mean predicted values and the observed is 2.8.
+Fig.~\ref{medium_model_predict} shows the actual observed language counts (purple triangles) and predictions of this model (green boxplots). The model does predict that Santo, Kanaky and Malakula have the highest language counts in the dataset. Our observed language counts for Santo, Kanky and Malakula are 24, 29 and 33 respectively. The model is very close for Santo and Kanaky for its average prediction value but underestimates Malakula by 17 languages. The absolute average difference between the mean predicted values and the observed is 1.3.
 
 %The results show that the model run with the shared-language island groups have an absolute average of difference between the predicting number of languages and observed of 2,8 the overnight-sailing distances island groups of 4.3 Fig.~\ref{medium_model_predict} and Fig.~\ref{SBZR_model_predict} illustrate the specific predictions the models make compared to the observed language counts. 
 
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.75\textwidth]{brms_predict_medium.png}
-\caption{Prediction from the model with island grouped for shared language. Number of languages is on the x-axis, observations on the Y. The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. Average absolute difference between the mean of the predictions and the observed = 2.8.}
+\caption{Prediction from the model with island grouped for shared language. Number of languages is on the x-axis, observations on the Y. The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. Average absolute difference between the mean of the predictions and the observed = 1.3.}
 \label{medium_model_predict}
 \end{figure}
 
-For the shared language island groups, political complexity (EA033) is the only variable that is different from zero, i.e. the full coefficient distribution does not overlap zero. If we only consider the 95\% credibility interval, as is common practice in statistics, there is one additional term that does not overlap zero: shoreline in interaction with time-depth. Fig \ref{brms_SBZR_group_full_effect_ridge_panels} in Appendix \ref{appendix_supp_figs} shows the full distributions.
+For the shared language island groups, the variables that have a 95\% confidence interval which are not different from zero are: political complexity (EA033), environmental PC1, Shoreline, time depth and shoreline in interaction with time depth. Fig \ref{brms_SBZR_group_full_effect_ridge_panels} in Appendix \ref{appendix_supp_figs} shows the full distributions.
 
 % #Frederic says: could also compute pareto-k https://mc-stan.org/loo/reference/pareto-k-diagnostic.html
 
@@ -329,7 +329,7 @@ For the overnight sailing distances, several island groups are much larger than 
 \label{SBZR_model_predict}
 \end{figure}
 
-The most important variables in this model (i.e. coefficient distribution does not overlap 0) were: political complexity, environmental PC1, shoreline, time depth and time-depth in interaction with shoreline  (see Fig \ref{brms_SBZR_group_full_effect_ridge_panels}). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead, the environmental PCs, Shoreline and time depth are relevant predictors.\footnote{They are relevant if we consider the 95\% credibility interval. If we take the full distribution, all terms overlap zero.} When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down significantly (from 4.3 to 2, see Fig. \ref{brms_SBZR_dropped_out_plot_diff}). If we ask this model that has been trained without the Vanuatu + Temotu data to predict how many languages are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains a significant factor as it does in the model with all observations.
+The most important variables in this model (i.e. 95\% confidence interval coefficient distribution does not overlap 0) were: political complexity, environmental PC2, shoreline, time depth and time-depth in interaction with shoreline  (see Fig \ref{brms_SBZR_group_full_effect_ridge_panels}). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead, the environmental PCs, Shoreline and time depth are relevant predictors.\footnote{They are relevant if we consider the 95\% credibility interval. If we take the full distribution, all terms overlap zero.} When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down significantly (from 4.3 to 2, see Fig. \ref{brms_SBZR_dropped_out_plot_diff}). If we ask this model that has been trained without the Vanuatu + Temotu data to predict how many languages are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains a significant factor as it does in the model with all observations.
 
 For tables of the effect Estimate, Rhat and ESS for both models, please see Appendix \ref{BRMS_model_tables}.
 
@@ -360,12 +360,11 @@ Maintaining long-distance contact can indeed be a function of shared cultural id
 
 \citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate (and possibly assimilate) them. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language that is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing being in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
 
-Whatever the political complexity variable is tracking, it is clear that it is one of the variables that most clearly picks out Vanuatu and Vanuatu is the place with the most languages. Where did this difference in societal organisation come from? As previous studies have indicated (e.g. \citet{lynch1981melanesian}), the answer may lie in contact with people from New Guinea and Solomons. It is possible that contact with non-Austronesian speaking communities further west brought with it societal changes to Vanuatu and some other islands that had made history go a different way there than in islands further east. Besides the possible cultural influence on attitudes and societal organisation, they may also have brought with them their own cultural heritage which would add to the diversity in itself.
+Whatever the political complexity variable is tracking, it is clear that it is one of the variables that most clearly picks out Vanuatu and Vanuatu is the place with the most languages. Where did this difference in societal organisation come from? As previous studies have indicated (e.g. \citet{lynch1981melanesian}), the answer may lie in contact with people of non-East Asian origin further west. It is possible that contact with communities from New Guinea and Solomons (in Bismarck before migration to Vanuatu or in Vanuatu after initial settlement) brought with it societal changes to Vanuatu that made history go a different way there than in islands further east (c.f. Pawley's idea of the same process at different speeds). Besides the possible cultural influence on attitudes and societal organisation, they may also have brought with them their own cultural heritage which would add to the diversity in itself.
 
 %In order to understand language diversification, we need to understand the steps of the process. Before languages have split into different mutually unintelligible varieties, 
 
 %The \citet{WLH1968}
-
 
 
 %Both models include political complexity as a statistically significant factor for predicting language diversity in Remote Oceania which gives support to the hypothesis tested in this study. As expected, space and time also came out as significant factors. This indicates that the longer time people lived in a place and the longer shoreline/more land there was, the more languages arise. This is in line with previous research. \citet{curriemace2009} found that politically complex societies (``ethnolinguistic groups'') cover a larger geographical area than societies with low political complexity.  Assuming one language per society\footnote{By using language area as a measurement of the size of ethnolinguistic groups/societies, \citet{curriemace2009} make this assumption.}, a random 10 km$^2$ sample which has a high average value for political complexity (averaging over all language polygons that are found in the cell) will then have fewer languages. For example, the language Turkish is associated with a political complexity score of four \citep{d_place_all} and covers a large area whereas the many languages of the nearby Caucasus are generally coded as low political complexity and cover smaller areas \citep{ethnologue2005}. If we take a 10 km$^2$ sample in Anatolia (where Turkish is spoken) we find fewer languages and higher complexity on average than if we sample the same sized area in the Caucasus. Similarly, we find fewer languages per island group in Remote Oceania the higher the average political complexity.
@@ -1075,7 +1074,7 @@ No competing interest is declared.
 
 %The research leading to this paper has received funding from the Department of Linguistic and Cultural Evolution, Max Planck Institute for Evolutionary, the School of Culture, History and Language at the Australian National University and from the Australian Research Council through The Wellsprings of Linguistic Diversity Laureate Project (awarded to Professor Nicholas Evans 2014-2018) and the Centre of Excellence for the Dynamics of Language (CoEDL).
 
-%I am fortunate enough to have colleagues in academia who have been generous enough to discuss conceptual methodological matters with me, these are Stephen Mann, Angela Chira, Russell Gray, Oleg Sobchuk, Richard McElreath, Tiago Tresoldi, Michael Dunn, Hannah Haynie, Outi Vesakoski, Fredric Blum and Luke Maurits. I am also grateful for the advice of Mary Walworth, Ray Harlow, Andrew Pawley, Paul Geraghty and Alexandre François concerning language classification; Matthew Spriggs, Geoff Kushnick and Christopher Ballard regarding archaeology and anthropology of Oceania and finally Oliver Sheehan for helpful discussions regarding coding of the Ethnographic Atlas variables.
+%I am fortunate enough to have colleagues in academia who have been generous enough to discuss conceptual methodological matters with me, these are Stephen Mann, Angela Chira, Russell Gray, Oleg Sobchuk, Richard McElreath, Tiago Tresoldi, Michael Dunn, Hannah Haynie, Outi Vesakoski, Fredric Blum and Luke Maurits. I am also grateful for the advice of Mary Walworth, Ray Harlow, Andrew Pawley, Paul Geraghty and Alexandre François concerning language classification; Matthew Spriggs, Russell Barlow, Geoff Kushnick and Christopher Ballard regarding archaeology and anthropology of Oceania and finally Oliver Sheehan for helpful discussions regarding coding of the Ethnographic Atlas variables.
 
 %I also want to thank my PhD supervisors who reviewed earlier versions of this study for my thesis \citep{skirgaard2020multilevel} and provided insightful input; Nicholas Evans, Andrew Pawley, Mark Ellison and Simon Greenhill.
 
