--- a/latex/main.tex
+++ b/latex/main.tex
@@ -308,7 +308,7 @@ Fig.~\ref{medium_model_predict} shows the actual observed language counts (purpl
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.75\textwidth]{brms_predict_medium.png}
-\caption{Prediction from the model with island grouped for shared language. Number of languages is on the x-axis, observations on the Y. The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. Average absolute difference between the mean of the predictions and the observed = 1.3.}
+\caption{Prediction from the model with island grouped for shared language. Number of languages is on the x-axis, observations on the Y. The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. The average absolute difference between the mean of the predictions and the observed value is 1.3.}
 \label{medium_model_predict}
 \end{figure}
 
@@ -320,19 +320,21 @@ If we drop one island group out at a time and re-run the model, we can asses whi
 
 %and shoreline in interaction with time depth are the variables that have a significant impact, i.e. do not cross zero (see coefficent distributions in Figs.  and \ref{brms_medium_group_full_effect_ridge_panels} in appendix \ref{appendix_supp_figs}).
 
-For the overnight sailing distances, several island groups are much larger than the previous grouping. The islands of Vanuatu  (including Anuta and Tikopia) and Temotu are all within the same group (see Fig \ref{polygon_plot_SBZR} in appendix \ref{sec:island_geo}; this is similar to the groups considered in \citet{pawley2007}). This also leads to a larger discrepancy between the number of languages, with Vanuatu and Temotu having 130 and S\={a}moa still only one. The average absolute difference between the predicted and observed number of languages is greater than for the previous grouping --- 4.3. Fig \ref{SBZR_model_predict} shows the prediction vs observed per island group.
+For the overnight sailing distances, several island groups are much larger than the previous grouping. The islands of Vanuatu  (including Anuta and Tikopia) and Temotu are all within the same group (see Fig \ref{polygon_plot_SBZR} in appendix \ref{sec:island_geo}; this is similar to the groups considered in \citet{pawley2007}). This also leads to a larger discrepancy between the number of languages, with Vanuatu and Temotu having 130 and S\={a}moa still only one. The average absolute difference between the predicted and observed number of languages is somewhat greater than for the previous grouping --- 1.6. Fig \ref{SBZR_model_predict} shows the prediction vs observed per island group.
 
 \begin{figure}[ht]
 \centering
 \includegraphics[width=0.75\textwidth]{latex/brms_predict_SBZR.png}
-\caption{Prediction from the model with island grouped for overnight sailing distances. The number of languages is on the x-axis, and observations on the Y. The dark blue triangles represent the observed number of languages and the green boxplot the predictions of the model. The average absolute difference between the mean of the predictions and the observed  4.3.}
+\caption{Prediction from the model with island grouped for overnight sailing distances. The dark blue triangles represent the observed number of languages, the green boxplot the predictions of the model. The average absolute difference between the mean of the predictions and the observed value is 1.6.}
 \label{SBZR_model_predict}
 \end{figure}
 
-The most important variables in this model (i.e. 95\% confidence interval coefficient distribution does not overlap 0) were: political complexity, environmental PC2, shoreline, time depth and time-depth in interaction with shoreline  (see Fig \ref{brms_SBZR_group_full_effect_ridge_panels}). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead, the environmental PCs, Shoreline and time depth are relevant predictors.\footnote{They are relevant if we consider the 95\% credibility interval. If we take the full distribution, all terms overlap zero.} When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down significantly (from 4.3 to 2, see Fig. \ref{brms_SBZR_dropped_out_plot_diff}). If we ask this model that has been trained without the Vanuatu + Temotu data to predict how many languages are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains a significant factor as it does in the model with all observations.
+%Shoreline:Settlement_date_grouping_finer§straddle_zero_95
+%environ_PC1:Shoreline§straddle_zero_95
 
-For tables of the effect Estimate, Rhat and ESS for both models, please see Appendix \ref{BRMS_model_tables}.
+The most important variables in this model (i.e. 95\% confidence interval of coefficient distribution does not overlap 0) were: political complexity, environmental PC2, shoreline, time depth and time-depth in interaction with shoreline  (see Fig \ref{brms_SBZR_group_full_effect_ridge_panels}). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead,  Shoreline in interaction with time depth and environmental PC1 in interaction with Shoreline are relevant predictors. When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down significantly (from 1.6 to 0.7, see Fig. \ref{brms_SBZR_dropped_out_plot_diff}). If we ask this model that has been trained \emph{without} the Vanuatu + Temotu data to predict how many languages there are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains an important predictor.
 
+For tables of the predictor Estimates, Rhat and ESS of both models, please see appendix \ref{BRMS_model_tables}.
 
 %Most of the island groups in this dataset have only one language, and this seems to have caused some issues (despite the Negative Binomial distribution). The model does best at predicting languages in Polynesia (which is dominated by island groups with only one language). Islands groups in Polynesia can have a very long coastline (like the Paumotu archipelago of French Polynesia) or very short one (like Niue). There is not as much difference in shorelines between islands of Vanuatu. The model seems to have struggled with using shoreline to predict languages globally, even leading to the result that Shoreline as a standalone term comes out in the model as negatively predicting the number of languages (though not with a \emph{p} value that passes traditional thresholds of significance). 
 
@@ -929,8 +931,29 @@ This dataset does not contain information on population size because there is no
 
 \section{Model settings}
 \label{appendix_model_settings}
-\citep{burkner2017brms}
+The Bayesian Regression model used is implemented in the R-package BRMS \citep{burkner2017brms}. There is no clear evidence for an informative prior for the predictors (a.k.a. fixed effects), therefore a prior was not specified which means the default is used, i.e. a flat prior.
 
+The list below specifies further settings of the model.
+
+\begin{itemize}
+    \item brms::brm()
+    \begin{itemize}
+    \item  iter = 30000
+    \item  warmup = 1000
+    \item  chains = 4
+    \item  cores = 4
+    \item  seed = 10
+    \item family = poisson
+    \item backend = cmdstanr
+    \end{itemize}
+    \item brms::posterior\_predict()
+    \begin{itemize}
+    \item  ndraws = 10000
+    \item  cores = 4
+    \end{itemize}
+\end{itemize}
+
+All code and data will also be available on OSF/GitHub/Zenodo.
 
 % BARG
 % https://www.nature.com/articles/s41562-021-01177-7/tables/1
@@ -1016,7 +1039,7 @@ Following the principles of Bayesian Analysis Reporting Guidelines \citep{krusch
 \begin{figure}[ht]
 
 \includegraphics[width=\textwidth]{brms_SBZR_group_full_effect_ridge_panels_plot.png}
-\caption{Coefficient distribution of BRMS model, using overnight sailing distances island groups with all observations.}
+\caption{Coefficient distribution of BRMS model, using overnight sailing distances island groups with all observations. Distributions where the 95\% confidence interval straddles zero are marked as more transparent.}
 \label{brms_SBZR_group_full_effect_ridge_panels}
 \end{figure}
 
