--- a/latex/BRMS_effects_SBZR.tex
+++ b/latex/BRMS_effects_SBZR.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Fri Aug 25 17:55:04 2023
+% Sat Aug 26 02:05:58 2023
 \begin{table}[ht]
 \centering
 \begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
@@ -11,10 +11,10 @@ EA033 & -0.917 & 0.063 & -1.042 & -0.797 & no & 82802.809 & 81343.825 \\
   environ\_PC1:Shoreline & 0.145 & 0.107 & -0.061 & 0.357 & yes & 69870.197 & 77242.507 \\ 
   environ\_PC2 & -0.710 & 0.158 & -1.017 & -0.398 & no & 79125.306 & 81539.120 \\ 
   Intercept & -0.231 & 0.157 & -0.546 & 0.066 & yes & 82655.407 & 80735.962 \\ 
-  Time depth & 0.415 & 0.163 & 0.093 & 0.735 & yes & 66168.261 & 74639.742 \\ 
-  Shoreline & 0.996 & 0.163 & 0.673 & 1.318 & yes & 73783.374 & 79021.266 \\ 
+  Time depth & 0.415 & 0.163 & 0.093 & 0.735 & no & 66168.261 & 74639.742 \\ 
+  Shoreline & 0.996 & 0.163 & 0.673 & 1.318 & no & 73783.374 & 79021.266 \\ 
   Shoreline:environ\_PC2 & 0.089 & 0.134 & -0.180 & 0.343 & yes & 62464.650 & 75072.193 \\ 
-  Shoreline:Time depth & 0.814 & 0.136 & 0.554 & 1.087 & yes & 60210.832 & 71135.019 \\ 
+  Shoreline:Time depth & 0.814 & 0.136 & 0.554 & 1.087 & no & 60210.832 & 71135.019 \\ 
    \bottomrule
 \end{tabular}
 \caption{Table of BRMS model outcomes, overnight-distance island groups (all observations included).} 
