--- a/latex/BRMS_effects_medium.tex
+++ b/latex/BRMS_effects_medium.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Fri Aug 25 17:55:04 2023
+% Sat Aug 26 02:05:58 2023
 \begin{table}[ht]
 \centering
 \begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
@@ -12,11 +12,11 @@ EA033 & -0.854 & 0.119 & -1.093 & -0.626 & no & 84425.289 & 81421.505 \\
   environ\_PC2 & 0.196 & 0.198 & -0.194 & 0.586 & yes & 53715.694 & 71858.101 \\ 
   environ\_PC3 & 0.109 & 0.135 & -0.158 & 0.371 & yes & 75057.067 & 79671.438 \\ 
   Intercept & 0.248 & 0.170 & -0.093 & 0.574 & yes & 58590.121 & 72978.752 \\ 
-  Time depth & 0.468 & 0.135 & 0.214 & 0.743 & yes & 86204.009 & 74655.200 \\ 
-  Shoreline & 0.632 & 0.174 & 0.296 & 0.980 & yes & 53563.638 & 70289.754 \\ 
+  Time depth & 0.468 & 0.135 & 0.214 & 0.743 & no & 86204.009 & 74655.200 \\ 
+  Shoreline & 0.632 & 0.174 & 0.296 & 0.980 & no & 53563.638 & 70289.754 \\ 
   Shoreline:environ\_PC2 & -0.353 & 0.182 & -0.697 & 0.019 & yes & 56356.997 & 64884.923 \\ 
   Shoreline:environ\_PC3 & 0.207 & 0.138 & -0.070 & 0.473 & yes & 63281.946 & 74922.550 \\ 
-  Shoreline:Time depth & 0.488 & 0.131 & 0.241 & 0.754 & yes & 88157.074 & 78784.599 \\ 
+  Shoreline:Time depth & 0.488 & 0.131 & 0.241 & 0.754 & no & 88157.074 & 78784.599 \\ 
    \bottomrule
 \end{tabular}
 \caption{Table of BRMS model outcomes, shared-language island groups (all observations included).} 
